[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
spin = "0.9"
woke = "0.0.2"
futures = { version = "0.3", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
uart8250 = { version = "0.5.0", features = ["fmt"], optional = true }
uart_xilinx = { version = "*", features = ["fmt"], optional = true }
heapless = "0.7.5"
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
    "inline-asm",
] }
rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
embedded-hal = "=1.0.0-alpha.4"
nb = "1.0.0"


[features]
board_qemu = ["uart8250"]
board_lrv = ["uart_xilinx"]